Begins to add support for #65 evolution. Need to manage draft entries to fix it completely.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1444 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -135,7 +135,7 @@ eng:
         #>intermediate: 'Intermédiaire'
         #>intermediate_entries: 'Écritures en tant que relevé intermédiaire'
         lock_version: 'Version'
-        #>number: 'Numéro du relevé de compte'
+        #>number: 'Numéro'
         #>started_on: 'Du'
         #>stopped_on: 'Au'
         updated_at: 'Updated at'
