--- a/config/locales/eng/pack.accountancy.yml
+++ b/config/locales/eng/pack.accountancy.yml
@@ -28,7 +28,9 @@ eng:
         #>title: 'Modifier le compte : {{value}}'
       accountize:
         #>cashed_payments: 'Inclure les règlements non encaissés'
+        #>dont_save_in_draft: 'Ne pas sauvegarder dans le brouillard'
         #>draft_generate: 'Enregistrer dans le brouillon'
+        #>invoices_count: 'Nombre de factures de vente à comptabiliser'
         nb_invoices:
           #>one: '1 facture enregistrée'
           #>other: '{{count}} factures enregistrées'
@@ -49,7 +51,7 @@ eng:
           #>one: '1 transfert enregistrée'
           #>other: '{{count}} transferts enregistrés'
           #>zero: 'Aucun transfert enregistré'
-        #>select_date_generation: 'Date limite d''''intégration'
+        #>select_date_generation: 'Date limite d''intégration'
         #>title: 'Comptabiliser vos opérations commerciales'
       accounts:
         #>account_create: 'Enregistrer un nouveau compte'
@@ -73,40 +75,43 @@ eng:
         #>iban: 'Numéro de compte bancaire internationale (IBAN)'
         #>rib: 'Description générale'
       bank_account_statement:
+        #>bank_account_statement_point: 'Pointer le relevé'
+        #>bank_account_statement_update: 'Modifier le relevé'
         #>bank_account_statements: 'Tableau des relevés de compte'
         #>cancel: 'Annuler'
         #>entry_credit: 'Crédit'
         #>entry_debit: 'Dédit'
         #>entry_name: 'Libellé'
+        #>journal_entries: 'Écritures'
         #>statement_bank_account_name: 'Nom du compte bancaire'
         #>statement_credit: 'Crédit'
         #>statement_debit: 'Débit'
         #>statement_number: 'Numéro du relevé de compte'
-        #>title: 'Détail du relevé de compte {{value}}'
+        #>title: 'Relevé de compte N°{{number}}'
       bank_account_statement_create:
         #>title: 'Pointer un nouveau relevé de compte'
       bank_account_statement_point:
-        #>bank_account_statement: 'Détail du relevé de compte'
-        #>bank_account_statements: 'Tableau des relevés de compte'
+        #>bank_account_statement_update: 'Modifier le relevé'
+        #>entries_to_point: 'Écritures à pointer'
         #>entry_credit: 'Crédit'
         #>entry_currency_rate: 'Devise'
         #>entry_debit: 'Débit'
         #>entry_name: 'Intitulé de l''écriture'
         #>recorded_on: 'Enregistrée le'
         #>statement_number: 'N° Relevé'
-        #>title: 'Pointage du relevé bancaire {{value1}} du compte bancaire {{value2}}'
+        #>title: 'Pointer le relevé N°{{number}} du {{bank_account}}'
         #>total: 'Total pour le compte bancaire :'
         #>total_credit: 'Crédit'
         #>total_debit: 'Débit'
         #>validate: 'Valider'
       bank_account_statement_update:
-        #>title: 'Modifier un relevé'
+        #>title: 'Modifier le relevé N°{{number}}'
       bank_account_statements:
         #>create_bank_account: 'Vous devez d''abord créer un compte bancaire.'
         #>credit: 'Total crédit'
         #>debit: 'Total débit'
-        #>select_bank_account: 'Sélectionnez un compte bancaire:'
-        #>title: 'Pointage des relevés de comptes bancaires'
+        #>select_bank_account: 'Sélectionnez un compte bancaire :'
+        #>title: 'Relevés de compte bancaire'
       bank_account_update:
         #>title: 'Modifier le compte bancaire'
       bank_accounts:
