--- a/config/locales/fra/notifications.yml
+++ b/config/locales/fra/notifications.yml
@@ -1,71 +1,78 @@
 fra:
   notifications:
-    access_denied: 'Vous n''avez pas le droit d''accéder à cette page. {{reason}} ({{url}})' 
-    be_aware_of_accountize_restrictions: 'La bascule en comptabilité ne peut se faire actuellement que pour les factures.' 
-    cannot_delete_entity: 'Il n''est pas possible de supprimer cette fiche car elle possède un historique comptable' 
-    cannot_delete_entity_nature: 'Vous ne pouvez pas supprimer ce type de fiche, il est rattaché à une ou plusieurs fiches' 
-    cannot_delete_journal: 'Ce journal contient des écritures et ne peut donc être effacé.' 
-    cannot_merge_an_entity_with_itself: 'Il n''est pas possible de fusionner une fiche avec elle-même' 
-    cannot_merge_entities: 'Une erreur est survenue. Il n''est pas possible de fusionner ces fiches.' 
-    changes_have_been_reflected: 'Les changements ont été correctement répercutés sur l''état des stocks actuel' 
-    changes_have_not_been_reflected: 'Les changements n''ont pas pu être correctement répercutés sur l''état des stocks actuel' 
-    closed_financialyears: 'L''exercice a été correctement clôturé' 
-    expired_session: 'Session expirée. Veuillez vous reconnecter.' 
-    import_succeeded: 'Vos données ont été correctement importées ' 
-    impossible_to_add_lines: 'Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande' 
-    impossible_to_add_lines_to_purchase: 'Vous ne pouvez plus ajouter de produits à votre achat' 
-    journal_closed_on: 'Le {{journal}} a été clôturé au {{closed_on}} correctement.' 
-    journal_reopened_on: 'Le {{journal}} a été déclôturé au {{closed_on}} correctement.' 
-    need_balanced_journal_to_tax_declaration: 'Tous vos journaux doivent être clôturés et équilibrés à cette date.' 
-    need_bank_account_to_record_statements: 'Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte.' 
-    need_closed_financialyear_to_declaration: 'Vous devez avoir un exercice clôturé pour créer une déclaration de TVA.' 
-    need_company_code_to_login: 'Vous devez saisir votre nom d''utilisateur accompagné de votre code société. Exemple : SOCIETE\jean' 
-    need_entries_to_letter: 'Vous devez avoir des écritures verrouillées enregistrées au compte client et fournisseur.' 
-    need_entries_to_point: 'Aucune écriture n''a été trouvé pour la période du relevé bancaire.' 
-    need_financialyear_to_consult_record_entries: 'Vous devez avoir un exercice ouvert pour pouvoir consulter des écritures.' 
-    need_journal_to_consult_record_entries: 'Vous devez créer un journal pour pouvoir consulter des écritures à l''intérieur.' 
-    need_journal_to_record_tax_declaration: 'Vous devez avoir au moins un journal des opérations diverses et un journal de vente ou d''achat pour pouvoir enregistrer des déclarations de taxes.' 
-    need_location_to_create_purchase_order_line: 'Vous devez créer un lieu de stockage pour pouvoir réaliser un achat' 
-    need_location_to_create_sale_order_line: 'Vous devez créer un lieu de stockage pour pouvoir réaliser une vente' 
-    need_location_to_record_stock_moves: 'Pour pouvoir gérer vos stocks vous devez enregistrer vos lieux de stockage.' 
-    need_payment_mode_to_create_embankment: 'Vous devez spécifier un mode de réglement pour effectuer une remise en banque' 
-    need_product_to_create_price: 'Pour pouvoir ajouter un prix, il vous faut d''abord enregistrer un produit à tarifer.' 
-    need_quantities_to_cancel_an_invoice: 'Vous devez spécifier une quantité pour pouvoir faire un avoir' 
-    need_stocks_location_to_create_products: 'Vous devez créer un lieu de stockage pour pouvoir créer un produit' 
-    need_stocks_to_create_inventories: 'Vous devez gérer les stocks d''au moins un produit pour pouvoir faire un inventaire' 
-    need_to_create_subscription_nature: 'Vous devez créer un type d''abonnement pour pouvoir gérer vos abonnements' 
-    new_actual_number: 'Le nouveau numéro en cours est {{actual_number}}' 
-    next_illegal_period_financialyear: 'Le prochain exercice ne démarre pas directement après.' 
-    no_authenticated: 'Vous n''avez pas pu être identifié. Le nom d''utilisateur ou le mot de passe doit être incorrect.' 
-    no_balance_template: 'Pas de modèle de document pour la balance' 
-    no_closable_financialyear: 'Vous n''avez aucun exercice à clôturer.' 
-    no_closable_journal: 'Vous ne pouvez pas clôturer ce journal.' 
-    no_embankable_payments: 'Il n''y a pas de réglements à remettre en banque' 
-    no_entries_pointable_for_bank_account: 'Ce compte bancaire ne contient aucune écriture à pointer.' 
-    no_existing_mandates: 'Il n''y a pas de responsabilités enregistrées pour l''instant' 
-    no_financialyear: 'Aucun exercice enregistré' 
-    no_lines_found: 'Aucun pruduit n''a été ajouté à la commande ' 
-    no_location: 'Aucun lieu de stockage n''est défini. Veuillez en créer un pour pouvoir gérer vos stocks' 
-    no_payment_to_embank: 'Aucun chèque à encaisser' 
-    no_reopenable_journal: 'Vous ne pouvez pas déclôturer ce journal.' 
-    no_stocks: 'Vous n''avez aucun stock. Si vous désirez gérer le stock d''un produit, veuillez cocher l''option "Gérer les stocks" dans les caractéristiques de votre produit.' 
-    no_template_journal: 'Pas de modèle journal' 
-    no_template_journal_by_id: 'Pas de modèle journal' 
-    no_unvalidated_operations: 'Aucun travail à réaliser' 
-    password_successfully_changed: 'Votre mot de passe a été mis à jour avec succès' 
-    prices_import_succeeded: 'Vos données ont été correctement importées' 
-    print_failure: 'Impossible d''imprimer. Essayer de recharger les modèles de documents pour corriger le problème. {{error}} ({{class}}).' 
-    record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement' 
-    record_has_not_been_removed: 'L''enregistrement n''a pas être supprimé correctement' 
-    restoration_finished: 'La restauration de la sauvegarde s''est terminée (en {{value}} secondes). Votre code société est {{code}}' 
-    sale_order_already_invoiced: 'La vente a déjà été facturée: vous ne pouvez pas définir de livraison' 
-    sale_order_cannot_be_updated: 'Le devis n''est plus modifiable.' 
-    sale_order_cant_be_deleted: 'La vente ne peut plus être supprimée' 
-    specify_filter: 'Vous choisir appliquer au moins un filtre de recherche' 
-    specify_updates: 'Vous devez spécifier au moins un champ à modifier' 
-    unavailable_model: '{{model}} indisponible ou inexistante ({{id}})' 
-    unknown_action: 'La page demandée est indisponible ({{url}})' 
-    unvalid_version_for_restore: 'La version du logiciel utilisé pour effectuer la sauvegarde ne correspond pas à la version actuelle du logiciel' 
-    validates_old_inventories: 'Il est conseillé de supprimer ou de valider les inventaires non validés avant d''en faire un nouveau' 
-    you_must_have_an_email_column: 'Vous devez avoir une colonne Email dans votre extraction' 
-    you_must_select_a_file_to_import: 'Vous devez sélectionner un fichier à importer' 
+    access_denied: 'Vous n''avez pas le droit d''accéder à cette page. {{reason}} ({{url}})'
+    accountizing_is_finished: 'La bascule en comptabilité est finie.'
+    accountizing_works_only_with_sales_invoices: 'La bascule en comptabilité ne peut se faire actuellement que pour les factures de vente.'
+    cannot_delete_entity: 'Il n''est pas possible de supprimer cette fiche car elle possède un historique comptable'
+    cannot_delete_entity_nature: 'Vous ne pouvez pas supprimer ce type de fiche, il est rattaché à une ou plusieurs fiches'
+    cannot_delete_journal: 'Ce journal contient des écritures et ne peut donc être effacé.'
+    cannot_merge_an_entity_with_itself: 'Il n''est pas possible de fusionner une fiche avec elle-même'
+    cannot_merge_entities: 'Une erreur est survenue. Il n''est pas possible de fusionner ces fiches.'
+    changes_have_been_reflected: 'Les changements ont été correctement répercutés sur l''état des stocks actuel'
+    changes_have_not_been_reflected: 'Les changements n''ont pas pu être correctement répercutés sur l''état des stocks actuel'
+    closed_financialyears: 'L''exercice a été correctement clôturé'
+    expired_session: 'Session expirée. Veuillez vous reconnecter.'
+    import_succeeded: 'Vos données ont été correctement importées '
+    impossible_to_add_lines: 'Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande'
+    impossible_to_add_lines_to_purchase: 'Vous ne pouvez plus ajouter de produits à votre achat'
+    journal_closed_on: 'Le {{journal}} a été clôturé au {{closed_on}} correctement.'
+    journal_record_has_been_saved: 'La pièce N°{{number}} a été enregistrée correctement'
+    journal_reopened_on: 'Le {{journal}} a été déclôturé au {{closed_on}} correctement.'
+    need_balanced_journal_to_tax_declaration: 'Tous vos journaux doivent être clôturés et équilibrés à cette date.'
+    need_bank_account_to_record_statements: 'Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte.'
+    need_closed_financialyear_to_declaration: 'Vous devez avoir un exercice clôturé pour créer une déclaration de TVA.'
+    need_company_code_to_login: 'Vous devez saisir votre nom d''utilisateur accompagné de votre code société. Exemple : SOCIETE\jean'
+    need_entries_to_letter: 'Vous devez avoir des écritures verrouillées enregistrées au compte client et fournisseur.'
+    need_entries_to_point: 'Aucune écriture n''a été trouvé pour la période du relevé bancaire.'
+    need_financialyear_to_consult_record_entries: 'Vous devez avoir un exercice ouvert pour pouvoir consulter des écritures.'
+    need_journal_to_consult_record_entries: 'Vous devez créer un journal pour pouvoir consulter des écritures à l''intérieur.'
+    need_journal_to_record_tax_declaration: 'Vous devez avoir au moins un journal des opérations diverses et un journal de vente ou d''achat pour pouvoir enregistrer des déclarations de taxes.'
+    need_location_to_create_purchase_order_line: 'Vous devez créer un lieu de stockage pour pouvoir réaliser un achat'
+    need_location_to_create_sale_order_line: 'Vous devez créer un lieu de stockage pour pouvoir réaliser une vente'
+    need_location_to_record_stock_moves: 'Pour pouvoir gérer vos stocks vous devez enregistrer vos lieux de stockage.'
+    need_payment_mode_to_create_embankment: 'Vous devez spécifier un mode de réglement pour effectuer une remise en banque'
+    need_product_to_create_price: 'Pour pouvoir ajouter un prix, il vous faut d''abord enregistrer un produit à tarifer.'
+    need_quantities_to_cancel_an_invoice: 'Vous devez spécifier une quantité pour pouvoir faire un avoir'
+    need_stocks_location_to_create_products: 'Vous devez créer un lieu de stockage pour pouvoir créer un produit'
+    need_stocks_to_create_inventories: 'Vous devez gérer les stocks d''au moins un produit pour pouvoir faire un inventaire'
+    need_to_create_subscription_nature: 'Vous devez créer un type d''abonnement pour pouvoir gérer vos abonnements'
+    new_actual_number: 'Le nouveau numéro en cours est {{actual_number}}'
+    next_illegal_period_financialyear: 'Le prochain exercice ne démarre pas directement après.'
+    no_authenticated: 'Vous n''avez pas pu être identifié. Le nom d''utilisateur ou le mot de passe doit être incorrect.'
+    no_balance_template: 'Pas de modèle de document pour la balance'
+    no_closable_financialyear: 'Vous n''avez aucun exercice à clôturer.'
+    no_closable_journal: 'Vous ne pouvez pas clôturer ce journal.'
+    no_embankable_payments: 'Il n''y a pas de réglements à remettre en banque'
+    no_entries_pointable_for_bank_account: 'Ce compte bancaire ne contient aucune écriture à pointer.'# NOT USED !!!
+    no_existing_mandates: 'Il n''y a pas de responsabilités enregistrées pour l''instant'
+    no_financialyear: 'Aucun exercice enregistré'
+    no_lines_found: 'Aucun pruduit n''a été ajouté à la commande '
+    no_location: 'Aucun lieu de stockage n''est défini. Veuillez en créer un pour pouvoir gérer vos stocks'
+    no_payment_to_embank: 'Aucun chèque à encaisser'
+    no_reopenable_journal: 'Vous ne pouvez pas déclôturer ce journal.'
+    no_stocks: 'Vous n''avez aucun stock. Si vous désirez gérer le stock d''un produit, veuillez cocher l''option "Gérer les stocks" dans les caractéristiques de votre produit.'
+    no_template_journal: 'Pas de modèle journal'
+    no_template_journal_by_id: 'Pas de modèle journal'
+    no_unvalidated_operations: 'Aucun travail à réaliser'
+    password_successfully_changed: 'Votre mot de passe a été mis à jour avec succès'
+    prices_import_succeeded: 'Vos données ont été correctement importées'
+    print_failure: 'Impossible d''imprimer. Essayer de recharger les modèles de documents pour corriger le problème. {{error}} ({{class}}).'
+    record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement'
+    record_has_not_been_removed: 'L''enregistrement n''a pas être supprimé correctement'
+    restoration_finished: 'La restauration de la sauvegarde s''est terminée (en {{value}} secondes). Votre code société est {{code}}'
+    sale_order_already_invoiced: 'La vente a déjà été facturée: vous ne pouvez pas définir de livraison'
+    sale_order_cannot_be_updated: 'Le devis n''est plus modifiable.'
+    sale_order_cant_be_deleted: 'La vente ne peut plus être supprimée'
+    specify_filter: 'Vous choisir appliquer au moins un filtre de recherche'
+    specify_updates: 'Vous devez spécifier au moins un champ à modifier'
+    unavailable_model: '{{model}} indisponible ou inexistante ({{id}})'
+    unknown_action: 'La page demandée est indisponible ({{url}})'
+    unvalid_version_for_restore: 'La version du logiciel utilisé pour effectuer la sauvegarde ne correspond pas à la version actuelle du logiciel'
+    validates_old_inventories: 'Il est conseillé de supprimer ou de valider les inventaires non validés avant d''en faire un nouveau'
+    x_unpointed_journal_entries: 
+      one: 'Il y a une écriture à pointer'
+      other: 'Il y a {{count}} écritures à pointer'
+      zero: 'Il n''y a pas d''écritures à pointer pour l''instant'
+
+    you_must_have_an_email_column: 'Vous devez avoir une colonne Email dans votre extraction'
+    you_must_select_a_file_to_import: 'Vous devez sélectionner un fichier à importer'
