--- a/config/locales/eng/general.yml
+++ b/config/locales/eng/general.yml
@@ -100,9 +100,11 @@ eng:
     #>record_has_not_been_removed: 'L''enregistrement n''a pu être supprimé.'
     #>reflect: 'Refléter'
     #>reopen: 'Déclôturer'
+    #>save: 'Enregistrer'
     #>search: 'Rechercher'
     search_go: 'Go!'
     #>submit: 'Envoyer'
+    #>total: 'Total'
     unavailable:
       #>entity: 'La fiche demandée est indisponible'
       #>financialyear: 'L''exercice comptable est indisponible {{value}}'
