--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -135,7 +135,7 @@ spa:
         #>intermediate: 'Intermédiaire'
         #>intermediate_entries: 'Écritures en tant que relevé intermédiaire'
         #>lock_version: 'Version'
-        #>number: 'Numéro du relevé de compte'
+        #>number: 'Numéro'
         #>started_on: 'Du'
         #>stopped_on: 'Au'
         #>updated_at: 'Mis à jour le'
